--- a/index.html
+++ b/index.html
@@ -66,4 +66,9 @@
 
 
   </body>
+  <footer>
+    <section class="grid-container usa-section--light usa-footer">
+      <p class="text-center"">This is a project of Code for Atlanta in partnership with the DeKalb County Complete Count Committee.</p>
+    </section>
+  </footer>
 </html>
